nullaway_error_65b42483-6338-46d0-81eb-f67b588e8cdf.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/Entity.java:307: error: [NullAway] dereferenced expression this.actions.get(actionName) is @Nullable
    this.actions.get(actionName).perform();
                                ^
    (see http://t.uber.com/nullaway )
